<resources>
    <string name="app_name">Paging3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_seen_in">First seen in:</string>
    <string name="hyphen">-</string>
    <string name="character_image">Character image</string>
    <string name="location_example">Earth (Replacement Dimension)</string>
    <string name="gender_example">Male</string>
    <string name="status_example">Alive</string>
    <string name="name_example">Rick Sanchez</string>
    <string name="character_status_color">Character Status color</string>
    <string name="species_example">Human</string>
    <string name="origin_example">Earth (C-137)</string>
    <string name="origin">Origin:</string>
    <string name="location">Location:</string>
    <string name="gender">Gender:</string>
    <string name="random_number">51</string>
    <string name="number_of_episodes">Number of episodes:</string>
    <string name="episode_example">S01E09</string>
    <string name="episode_name_example">Something Ricked This Way Comes</string>
    <string name="air_date_example">March 24, 2014</string>
    <string name="air_date">Air Date:</string>
    <string name="characters">Characters</string>
    <string name="episodes">Episodes</string>
</resources>