<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".presentation.characterdetails.CharacterDetailsFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivCharacter"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/character_image"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MaterialComponents.MaterialCalendar.Day" />

    <TextView
        android:id="@+id/tvCharacterDetailsName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/extra_small_margin"
        android:text="@string/name_example"
        android:textColor="@color/textColor"
        android:textSize="@dimen/triple_extra_large_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCharacter" />

    <TextView
        android:id="@+id/tvDetailsStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/triple_extra_large_margin"
        android:layout_marginTop="@dimen/triple_extra_large_margin"
        android:text="@string/status_example"
        android:textColor="@color/textColor"
        android:textSize="@dimen/double_extra_large_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCharacterDetailsName" />

    <TextView
        android:id="@+id/tvDetailsSpecies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/triple_extra_large_margin"
        android:layout_marginEnd="@dimen/triple_extra_large_margin"
        android:text="@string/species_example"
        android:textColor="@color/textColor"
        android:textSize="@dimen/double_extra_large_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCharacterDetailsName" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/triple_extra_large_margin"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDetailsStatus">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/double_extra_small_margin"
            android:text="@string/gender"
            android:textColor="@color/textColor"
            android:textSize="@dimen/extra_large_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDetailsGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_example"
            android:textColor="@color/textColor"
            android:textSize="@dimen/extra_large_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:gravity="center"
        android:orientation="horizontal"
        android:textSize="@dimen/extra_large_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/double_extra_small_margin"
            android:text="@string/origin"
            android:textColor="@color/textColor"
            android:textSize="@dimen/extra_large_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDetailsOrigin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/origin_example"
            android:textColor="@color/textColor"
            android:textSize="@dimen/extra_large_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/double_extra_small_margin"
            android:text="@string/location"
            android:textColor="@color/textColor"
            android:textSize="@dimen/extra_large_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDetailsLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_example"
            android:textColor="@color/textColor"
            android:textSize="@dimen/extra_large_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout31"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/double_extra_small_margin"
            android:text="@string/number_of_episodes"
            android:textColor="@color/textColor"
            android:textSize="@dimen/extra_large_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDetailsNumberOfEpisodes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random_number"
            android:textColor="@color/textColor"
            android:textSize="@dimen/extra_large_size" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>