<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/medium_padding">

        <ImageView
            android:id="@+id/iv_rick"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:contentDescription="@string/character_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/rick" />

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/extra_small_margin"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_rick"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvEpisode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/triple_extra_small_margin"
                android:text="@string/episode_example"
                android:textSize="@dimen/extra_large_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hyphen"
                android:textSize="@dimen/extra_large_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/triple_extra_small_margin"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/episode_name_example"
                android:textSize="@dimen/extra_large_size"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/extra_small_margin"
            android:layout_marginTop="@dimen/large_margin"
            android:orientation="horizontal"
            app:layout_constraintStart_toEndOf="@+id/iv_rick"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/large_margin"
                android:text="@string/air_date"
                android:textSize="@dimen/large_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvAirDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/extra_small_margin"
                android:layout_marginBottom="@dimen/large_margin"
                android:text="@string/air_date_example"
                android:textSize="@dimen/large_size" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>